# supply-chain-security-collector

./: .env.template  .eslintignore  .gitignore  AGENTS.md  CLEANUP-SUMMARY.md  DECISIONS.md  DESIGN.md  GEMINI.md  HACKING.md  IMPLEMENTATION_SUMMARY.md  NEO-README.md  README.md  TEST_PLAN.md  VICTORY.md  codegen.ts  debug.db  eslint.config.js  package-lock.json  package.json  pyproject.toml  querying-raw-data-tables.md  repomix-output.xml  security-summary.csv  spectaql.yml  test-extended.sh  tsconfig.json  validate-with-mocks.sh  validate.sh
docs/: ARCHITECTURE-PLAN.md  ARCHITECTURE.md  CODEGEN-INSIGHT.md  CURRENT-STATE-SUMMARY.md  FLAT-TABLE-EXPLANATION.md  GRAPHQL-CODEGEN-CAPABILITIES.md  GRAPHQL-DOCUMENTATION-OPTIONS.md  HACKING.md  PARQUET-BLISS.md  PHASE-0-COMPLETE.md  WORKING-WITH-FLATTENED-DATA.md  adding-new-queries.md  analysis-improvements.md  codegen-guide.md  data-model.md  decisions.md  design.md  detection-reference.md  github-api-limits.md  output-architecture.md  project-metadata-plan.md  schema-map.json  schema.json  schema.md  size-reporting.md  sql-refactoring.md  viewing-parquet-data.md  workflow-json-strategy.md
input/: cncf-full-landscape.json  graduated.jsonl  incubation.jsonl  minimal-example.json  sandbox.jsonl  test-allmocked.jsonl  test-flux.jsonl  test-simple-format.json  test-single-project.json  test-single.jsonl  test-three-projects.json  test-three-repos.jsonl  test-vscode.jsonl
notebooks/: agg_tables_overview.ipynb  sbom-ci-analysis.ipynb
output/: graduated.csv  graduated.json  incubation.csv  incubation.json  sandbox.csv  (+1 more)
(+65 files in other folders)
